--- a/06_best_practices/homework/integration-test/docker-compose.yaml
+++ b/06_best_practices/homework/integration-test/docker-compose.yaml
@@ -1,5 +1,16 @@
 services:
-  kinesis:
+  backend:
+    image: ${LOCAL_IMAGE_NAME}
+    environment:
+      - INPUT_FILE_PATTERN=${INPUT_FILE_PATTERN}
+      - OUTPUT_FILE_PATTERN=${OUTPUT_FILE_PATTERN}
+      - PREDICTION_YEAR=${PREDICTION_YEAR}
+      - PREDICTION_MONTH=${PREDICTION_MONTH}
+      - AWS_DEFAULT_REGION=us-east-1
+      - S3_ENDPOINT_URL=http://s3:4566/
+      - AWS_ACCESS_KEY_ID=abc
+      - AWS_SECRET_ACCESS_KEY=xyz
+  s3:
     image: localstack/localstack
     ports:
       - "4566:4566"
